--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-future
-numpy
-scikit-learn
-scipy
-torch
-pandas
+joblib>=1.2.0
+matplotlib>=3.7.1
+numpy>=1.23.5
+pandas>=2.0.1
+patsy>=0.5.3
+scikit-learn>=1.2.2
+scipy>=1.10.1
+statsmodels>=0.13.5
+torch>=2.0.1
+tqdm>=4.65.0
+xgboost>=1.7.5
